# Daily

./: .gitignore  README.md  bible_daily.py  brevity.css  brevity.html  brevity.py  brevity_template.html  daily_brief.css  daily_brief.html  daily_brief.py  daily_brief_data.json  daily_brief_template.html  main  main.py  plan.txt  pyproject.toml  test.py  verify_template.py  verify_template_v2.py  verify_x_trends.py  verse_history.json
.codex/environments/: environment.toml
.github/workflows/: main.yml  manual-test.yml  test.yml
misc/: TODO.txt  personal-trends.py  verify_template.py  verify_template_v2.py  world-trends.py
resources/: brevity.json  daily_brief_data.json  design-test.html  jesus.json  verse_history.json
