[project]
name = "daily"
version = "0.1.0"
description = "Post a daily NKJV quote to Slack using the xAI API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.36",
    "feedparser>=6.0.10",
    "jinja2>=3.1.3",
    "weasyprint>=61.1",
]

[tool.uv]
