[project]
name = "brevity"
version = "0.1.0"
description = "Generate the Brevity daily brief and deliver it to Slack"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.36",
    "feedparser>=6.0.10",
    "jinja2>=3.1.3",
    "weasyprint>=61.1",
    "slack-sdk>=3.27.0",
    "requests-oauthlib>=1.3.1",
]

[tool.uv]
